samples/_failures_safe/1761128596_1adff2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_58a4c990.c: In function ‘main’:
./samples/SAFE/__tmp_58a4c990.c:153:17: error: expected expression at end of input
  153 |                 } else if (status == -
      |                 ^
./samples/SAFE/__tmp_58a4c990.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_58a4c990.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_58a4c990.c:153:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_58a4c990.c:153:17: error: expected declaration or statement at end of input
